Oct 26 minor fixes (#30)
* C-MS nickname

* Make chibis not stretched in tooltip

* JP nicknames

* Limit battery calculator input to reasonable amounts

--- a/brainlets/girlsfrontline/static/girlsfrontline/css/sim.css
+++ b/brainlets/girlsfrontline/static/girlsfrontline/css/sim.css
@@ -295,6 +295,7 @@ input:checked + .slider-small:before {
 
 .img-tooltip-chibi {
   position: relative;
+  object-fit: cover;
   width: 120px;
   height: 120px;
   z-index: 9000;
